hphp/test/slow/reassign_this/1493.php.expectf

Fatal error: Cannot re-assign $this in %s/test/slow/reassign_this/1493.php on line 6
